compiler/tests/en/errors/each_map_single.salam
// EXPECT: E065
func main:
    mut m := HashMap {} as HashMap<str, int>
    m.put("a", 1)
    each v in m:
        __ v
    end
end
